fix hr overflow bug

--- a/_basics.scss
+++ b/_basics.scss
@@ -141,7 +141,6 @@ hr {
   border: none;
   position: relative;
   clear: both;
-  width: 100%;
   height: ($font-size * 4.5);
   background-color: transparent;
 
